tests/error/modifier_errors/flag_unitary_qubit.err
Error: Unitary constraint violation (at $FILE:11:8)
   | 
 9 | @guppy(unitary=True)
10 | def test() -> None:
11 |     p = qubit()
   |         ^^^^^^^ This function cannot be called in a unitary context

Note: The function allocates qubits, which is not allowed in a unitary context

Guppy compilation failed due to 1 previous error
